unpackaged/main/default/objects/nbavs__Settings__c/nbavs__Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Settings Deprecated</label>
</CustomObject>