unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__AccessOwnRecordings__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AccessOwnRecordings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Global Setting Access Own Recording default set is Unchecked.</description>
    <label>Access Own Recordings</label>
    <type>Checkbox</type>
</CustomField>