unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__AccountLookupEnable__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AccountLookupEnable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Account Lookup</label>
    <type>Checkbox</type>
</CustomField>