unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__AutoLogoutNBGroupsOnSFLogout__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AutoLogoutNBGroupsOnSFLogout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically log user out of all Natterbox Groups when Salesforce detects user has logged out (only applicable tor user&#39;s NOT using Natterbox Availability)</description>
    <inlineHelpText>Automatically log user out of all Natterbox Groups when Salesforce detects user has logged out (only applicable tor user&#39;s NOT using Natterbox Availability)</inlineHelpText>
    <label>Auto Logout NB Groups on SF Logout</label>
    <type>Checkbox</type>
</CustomField>