unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__Beta_WebPhone__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Beta_WebPhone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beta WebPhone</label>
    <type>Checkbox</type>
</CustomField>