unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__ContactLookupEnable__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ContactLookupEnable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>CRO object Organization Level Account Settings Lookup Enable.</description>
    <label>Enable Contact Lookup</label>
    <type>Checkbox</type>
</CustomField>