unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__Control_by_Recording_Access__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Control_by_Recording_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use Call Recording Access Policies to Control Insight Access</description>
    <label>Control by Recording Access</label>
    <type>Checkbox</type>
</CustomField>