unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__Enable_All_Insight_Categories__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Enable_All_Insight_Categories__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only categories matching the Fired or Not Fired and Expected rule are written to Insight__c by default. Set this to True if all categories needs to be considered</description>
    <label>Enable All Insight Categories</label>
    <type>Checkbox</type>
</CustomField>