unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__Enable_End_User_Access_All_Insights__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Enable_End_User_Access_All_Insights__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>End Users Can Access All Their Insight Record</inlineHelpText>
    <label>Enable End User Access All Insights</label>
    <type>Checkbox</type>
</CustomField>