unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__Enable_Skills_Reporting__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Enable_Skills_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Skills Reporting</label>
    <type>Checkbox</type>
</CustomField>