unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__HoldMusic__c.field-meta.xml
<CustomField>
    <fullName>nbavs__HoldMusic__c</fullName>
    <label>Hold Music</label>
    <length>32</length>
    <type>Text</type>
</CustomField>