unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__HoldMusicShoutcast__c.field-meta.xml
<CustomField>
    <fullName>nbavs__HoldMusicShoutcast__c</fullName>
    <label>Hold Music Shoutcast</label>
    <length>255</length>
    <type>Text</type>
</CustomField>