unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__LeadLookupEnable__c.field-meta.xml
<CustomField>
    <fullName>nbavs__LeadLookupEnable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Lead Lookup</label>
    <type>Checkbox</type>
</CustomField>