unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__LogsSearch__c.field-meta.xml
<CustomField>
    <fullName>nbavs__LogsSearch__c</fullName>
    <label>Logs Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>