unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__NewUsersTrackCTIDevice__c.field-meta.xml
<CustomField>
    <fullName>nbavs__NewUsersTrackCTIDevice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Newly created users will have Track CTI Device set to this value</description>
    <label>Track CTI Device For New Users</label>
    <type>Checkbox</type>
</CustomField>