unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__Phone_Number_Match_Precision__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Phone_Number_Match_Precision__c</fullName>
    <defaultValue>9</defaultValue>
    <inlineHelpText>Default: 9</inlineHelpText>
    <label>Phone Number Match Precision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>