unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__Phone_Number_Search_Precision__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Phone_Number_Search_Precision__c</fullName>
    <defaultValue>4</defaultValue>
    <inlineHelpText>Default: 4</inlineHelpText>
    <label>Phone Number Search Precision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>