unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__PresentCallerId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__PresentCallerId__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Present Caller Id</label>
    <type>Checkbox</type>
</CustomField>