unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__SCVNBA_Enabled__c.field-meta.xml
<CustomField>
    <fullName>nbavs__SCVNBA_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable Einstein Next Best Action for Service Cloud Voice</description>
    <label>Next Best Action Integration Enabled</label>
    <type>Checkbox</type>
</CustomField>