unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__SCVNBA_TranscriptionBatchSize__c.field-meta.xml
<CustomField>
    <fullName>nbavs__SCVNBA_TranscriptionBatchSize__c</fullName>
    <defaultValue>20</defaultValue>
    <label>Transcription Event Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>