unpackaged/main/default/objects/nbavs__Settings__c/fields/nbavs__Voice__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Voice__c</fullName>
    <label>Voice</label>
    <length>64</length>
    <type>Text</type>
</CustomField>